# ygo_server

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yaml  setup_db.sql
database/: Dockerfile  setup_db.sql
src/: database.rs  main.rs  tournaments.rs  users.rs
