[package]
name = "ygo_server"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.4", default-features = false }
rocket_contrib = { version = "0.4", features = ["json", "diesel_sqlite_pool"] }
diesel = { version = "1.4", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
scrypt = "0.3"

[profile.dev.package.scrypt]
opt-level = 2
